--- a/Utils/Utils/Utils.csproj
+++ b/Utils/Utils/Utils.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.60.0.3043" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="TwitchLib" Version="3.5.3" />
   </ItemGroup>
 
 </Project>
